--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,7 @@
 yoshimi 1.3.6 M
 
 2015-10-23 Will
-- Implemented unix style paging for command lists
+- Implemented unix style paging for command lists from ideas of F. Silvain
 - Updated some docs
 
 2015-10-16 Will
