Implemented command line listing of parts with instruments installed.

--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,9 @@
 yoshimi 1.3.6 M
 
 2015-10-23 Will
-- Implemented unix style paging for command lists from ideas of F. Silvain
-- Updated some docs
+- Implemented unix style paging for command lists from ideas of F. Silvain.
+- Implemeted command line listing of parts with instuments installed.
+- Updated some docs.
 
 2015-10-16 Will
 - Implemented load and save of patch sets.
