--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.6 M
 
+2015-10-25 Will
+- Added command line history patch from of F. Silvain.
+- Corrected bank listing regression.
+
 2015-10-24 Will
 - Moved cli output call to make it more generic.
 - Removed duplicate report code in synthEngine.
