--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.3.6 M
 
+2015-11-3 Will
+- Prepared XML wrapper so that meaningful data can be put
+  in 'INFORMATION' not just instrument settings.
+- changed menu bar 'Show' to 'View'.
+
 2015-10-31 Will
 - Added 'Show' to top menu bar.
 - Rationalised top menu bar entries.
