--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 yoshimi 1.3.6 M
 
 2015-11-12 Will
+- More windows under control.
+
+2015-11-12 Will
 - Now ensures session files always save with the .state extension.
 - Remembers the last positions of major windows and reopens them
   if shut down while they were still open.
