--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.6 M
 
+2015-11-14 Will
+- Rationalised window titles.
+- Consolidated internal filenames.
+
 2015-11-13 Will
 - More windows under control.
 - Improved save and load code.
