--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,8 @@
-yoshimi 1.3.7 rc1
+yoshimi 1.3.7
+
+2015-11-16
+- Added experimental breath control CC2
+- Set release version 1.3.7
 
 2015-11-14 Will
 - Rationalised window titles.
