--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ yoshimi 1.3.x
 2015-11-20 Will
 - Fixed regression where sending CCs would close part windows
   and streams of them blocked the gui.
+- Discovered previous bug was hiding 'inappropriate' gui calls :(
+  Now fixed properly.
 
 2015-11-19 Will
 - Ported pink noise feature from Zyn 2.5.2
