--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,14 @@
+yoshimi 1.3.7.1
+
+2015-11-20 Will
+- Fixed regression where sending CCs would close part windows
+  and streams of them blocked the gui.
+- Discovered previous bug was hiding 'inappropriate' gui calls :(
+  Now fixed properly.
+
+2015-11-17 Will
+- Minor display corrections
+
 yoshimi 1.3.7
 
 2015-11-16
