--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.3.x
 
+2015-11-21 Will
+- Re-enabled 'minimal' in XMLwrapper for all except presets.
+- Presets wasn't showing 1st character (array offset by 1).
+  Corrected.
+
 2015-11-20 Will
 - Fixed regression where sending CCs would close part windows
   and streams of them blocked the gui.
