--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,9 @@ yoshimi 1.3.x
 - Re-enabled 'minimal' in XMLwrapper for all except presets.
 - Presets wasn't showing 1st character (array offset by 1).
   Corrected.
+- Clarified copyright notice.
+- If in kit mode engine window title bars now display the kit number
+  and name if any.
 
 2015-11-20 Will
 - Fixed regression where sending CCs would close part windows
