--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.7.1
 
+2015-11-22 Will
+- Applied cmake ARCH and LV2 patches.
+
 2015-11-21 Will
 - Presets wasn't showing 1st character (array offset by 1).
   Corrected.
