--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.3.x
 
+2015-11-25 Will
+- Applied cmake ARCH and LV2 patches.
+- Added notes ond audio direction in'doc'.
+- Changed CC logging channel numbers to start at 1.
+- Improved some command line responses.
+
 2015-11-21 Will
 - Implemented logging of incoming MIDI CCs.
 - Fixed crash bug caused by new kit item name being called before
