--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,11 @@
 yoshimi 1.3.x
 
+
+
 2015-11-27 Will
 - Resolved instrument name anomaly. Part name is now always internal
   instrument name, regardless of file name.
+- Minor optimisation. No need to reload same bank.
 
 2015-11-25 Will
 - Applied cmake ARCH and LV2 patches.
