--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,8 @@
 yoshimi 1.3.x
 
-
+2015-11-28 Will
+- Fixed regression where renaming instruments failed to actually
+  write to the file.
 
 2015-11-27 Will
 - Resolved instrument name anomaly. Part name is now always internal
@@ -9,7 +11,7 @@ yoshimi 1.3.x
 
 2015-11-25 Will
 - Applied cmake ARCH and LV2 patches.
-- Added notes ond audio direction in'doc'.
+- Added notes on audio direction in'doc'.
 - Changed CC logging channel numbers to start at 1.
 - Improved some command line responses.
 
