--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.3.x
 
+2015-12-5 Will
+- Improved 'Humanise' feature and changed to a slider.
+- Small code clean-up arond root,bank, program code.
+- Improved gui timeout delay on fault.
+
 2015-12-2 Will
 - Minor improvement to Root, Bank, Program selection in ring buffer.
 
