--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.3.x
 
+2015-12-7 Will
+- Humanise settings now saved in patch sets.
+- Reverted CMakeLists as problems now worse for fedora and some debian installs.
+- Added lv2 makefile and install to cmake distclean.
+
 2015-12-6 Will
 - Bugfix MIDI not responding to CC2 sometimes.
 - Removed jack MIDI ringbuffer now served better by guithreadmessage
