--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.3.x
 
+2015-12-9 Will
+- Corrected jack/alsa MIDI behaviour and added user defined source name
+  for jack MIDI in gui.
+- Updated docs.
+
 2015-12-7 Will
 - Humanise settings now saved in patch sets.
 - Reverted CMakeLists as problems now worse for fedora and some debian installs.
