--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.3.x
 
+2015-12-12 Will
+- Applied possible Install fix to CMakeLists.txt.
+- Re-organised command interface files ready (hopefully) for a big
+  push on implementation.
+
 2015-12-10 Will
 - Enabled AddSynth voice formant filter Q to respond to settings. This
   brings it into line with the recent Zyn. upgrade but shouldn't change
