--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,7 @@ yoshimi 1.3.x
 - Bugfix segfault when doing a reset via command line if gui active.
 - Command line part change now updates gui
 - More reoganisation of cammand interface.
+- Started to implement command line level sensing.
 
 2015-12-12 Will
 - Applied possible Install fix to CMakeLists.txt.
