--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2015-12-14 Will
+- Audio and midi preferences can now be set in config window.
+- More improvements to command line interface.
+
 2015-12-13 Will
 - Bugfix segfault when doing a reset via command line if gui active.
 - Command line part change now updates gui
