--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.3.x
 2015-12-14 Will
 - Audio and midi preferences can now be set in config window.
 - More improvements to command line interface.
+- Updated docs
 
 2015-12-13 Will
 - Bugfix segfault when doing a reset via command line if gui active.
