--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.3.x
 
+2015-12-17 Will
+- Implemented major effects settings for command line.
+  Effect number, type and send.
+- Some code cleanups.
+
 2015-12-15 Will
 - Vector control now has it's own level on command line.
 - Setting audio destination is now by names (not numbers).
