--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,8 @@
 yoshimi 1.3.x
 
 2015-12-18 Will
-- All effect sends in place (no gui update)
+- All command line effect sends in place (no gui update).
+- All command line effect presets available.
 - More code cleanups
 
 2015-12-17 Will
