--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 yoshimi 1.3.x
 
-2015-12-20
+2015-12-21 Will
+- More code cleanup.
+
+2015-12-20 Will
 - (MusicIO) hooks in place for key and channel pressure.
 - Implemented Y/N query for command line.
 - Command line can now change part names.
