Bugfix. Had screwed up vector Y control :(

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2015-12-22 Will
+- Bugfix. Had screwed up vector Y control. Now better
+  error checked too.
+
 2015-12-21 Will
 - More code cleanup.
 
