--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,12 @@
 yoshimi 1.3.x
 
 2015-12-23 Will
+- Ported pop suppression feature from Zyn 2.5.2
+- Changed default XML Zyn instrument compatibility version to 2.5
+- Bugfix. NRPN insert and system effect changes only worked correctly
+  on the lowest value effect number.
+
+2015-12-23 Will
 - Small improvements to command line access.
 
 2015-12-22 Will
