--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 yoshimi 1.3.x
 
-2015-12-23 Will
+2015-12-27 Will
+- C/L system and insert effects now report to the gui
+
+2015-12-26 Will
 - Ported pop suppression feature from Zyn 2.5.2
 - Changed default XML Zyn instrument compatibility version to 2.5
 - Bugfix. NRPN insert and system effect changes only worked correctly
