--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.3.x
 
+2015-12-29 Will
+- Updated docs (especially command line)
+- Moved Drum kit 2 so it is MIDI accessible
+- Added Moor Drums
+- Added Choir Stabs
+
 2015-12-27 Will
 - C/L system and insert effects now report to the gui
 
