--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.3.x
 
+
+2015-12-30 Andrew
+- Revised music clients so that Yoshimi can always start.
+  If the wanted backend is missing it will try the other
+  option and if that filas, set a null backend. 
+
 2015-12-29 Will
 - Updated docs (especially command line)
 - Moved Drum kit 2 so it is MIDI accessible
