--- a/Changelog
+++ b/Changelog
@@ -1,10 +1,15 @@
 yoshimi 1.3.x
 
+2015-12-31 Will
+- Disabled jack/alsa tabs if running as LV2
+- Allow mutiple instances whith alsa audio as they can
+  now be set to different backends/soundcards.
+- Root/Bank/Program thread now lower than both jack and alsa.
 
 2015-12-30 Andrew
 - Revised music clients so that Yoshimi can always start.
   If the wanted backend is missing it will try the other
-  option and if that filas, set a null backend. 
+  option and if that fails, set a null backend. 
 
 2015-12-29 Will
 - Updated docs (especially command line)
