--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.x
 
+2016-1-2 Will
+- Program change no longer mutes the whole synth.
+
 2015-12-31 Will
 - Disabled jack/alsa tabs if running as LV2
 - Allow mutiple instances whith alsa audio as they can
