--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.x
 
+2016-1-4- Will
+- Subsynth bugfix. Buffer size no longer has to be divisible by 8.
+
 2016-1-3 Will
 - Improved cleanness of program load from various sources.
 
