--- a/Changelog
+++ b/Changelog
@@ -7,6 +7,7 @@ yoshimi 1.3.x
 - Tiny optimisation to SybSynth filter.
 - Updated appdata and desktop files.
 - Updated Command_Line.txt
+- Implemented alsa/jack preferences within command line environment.
 
 2016-1-6 Rob
 - Completed Program Change improvements and defined common point
