--- a/Changelog
+++ b/Changelog
@@ -1,13 +1,14 @@
 yoshimi 1.3.x
 
-2016-1-6 Will
+2016-1-8 Will
 - Synchronised config change warning between gui and command line.
+- Implemented saving current part to external instrument.
 
 2016-1-7 Will
 - bugfix, Yoshimi now exits correctly with '-c' argument and trailing '&'.
 - Help now context sensitive, and list reoganised.
 - Command line can now load individual external instruments to the current part.
-- Tiny optimisation to SybSynth filter.
+- Tiny optimisation to SubSynth filter.
 - Updated appdata and desktop files.
 - Updated Command_Line.txt
 - Implemented alsa/jack preferences within command line environment.
