--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.3.x
 2016-1-8 Will
 - Synchronised config change warning between gui and command line.
 - Implemented saving current part to external instrument.
+- Updated repositories.
 
 2016-1-7 Will
 - bugfix, Yoshimi now exits correctly with '-c' argument and trailing '&'.
