--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,10 @@
 yoshimi 1.3.x
 
+2-16-1-12 Will
+- Created Yoshimi man page.
+
 2016-1-10 Will
-- Set version as 1.3.8 rc1
+- Set version as 1.3.8 rc1.
 - Moved banks & roots to end of config file. Will eventually be
   separate file.
 
