--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.3.x
 
+2016-1-14 Will
+- More doc updates.
+- Set version as 1.3.8 rc3.
+- Resolved minor ambiguities in command line syntax.
+
 2016-1-13 Will
 - Updated docs.
 - Set version as 1.3.8 rc2.
