--- a/Changelog
+++ b/Changelog
@@ -1,15 +1,19 @@
 yoshimi 1.3.x
 
+yoshimi 1.3.8
+
 2016-1-14 Will
 - More doc updates.
 - Set version as 1.3.8 rc3.
 - Resolved minor ambiguities in command line syntax.
+- Final tidy up of docs.
+- Set version to 1.3.8 for release.
 
 2016-1-13 Will
 - Updated docs.
 - Set version as 1.3.8 rc2.
 - Corrected part number (CLI numbers *must* start from zero).
-- CLI Y axis now uses up/down insteand of sharing left/right with X.
+- CLI Y axis now uses up/down instead of sharing left/right with X.
 
 2016-1-12 Will
 - Created Yoshimi man page.
