--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.3.x
 2016-1-21 Will
 - Started splitting up yoshimi's config files and separated out banks
   to their own files within .config/yoshimi/.
+- Changed confg save to banks save in banks UI.
 
 2016-1-17 Will
 - Bugfix. Quick patch from Csaba so Addsynth vice presets are recognised.
