--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2016-1-22 Rob
+- Workaround to avoid cmake 3.4.1 bug by using our own routine to 
+  generate .cpp files from .fl ones and not using fltk_wrap_ui
+
 2016-1-21 Will
 - Started splitting up yoshimi's config files and separated out banks
   to their own files within .config/yoshimi/.
