--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.x
 
+2016-1-24 Will
+- Minor reorganisations.
+
 2016-1-22 Rob
 - Workaround to avoid cmake 3.4.1 bug by using our own routine to 
   generate .cpp files from .fl ones and not using fltk_wrap_ui
