--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,8 @@ yoshimi 1.3.x
 
 2016-1-24 Will
 - Minor reorganisations.
+- Only relevant XML files now carry base parameters.
+- CLI no longer sets configChanged when altering the new banks file.
 
 2016-1-22 Rob
 - Workaround to avoid cmake 3.4.1 bug by using our own routine to 
