--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2016-1-26 Will
+- Patch Sets History no longer in main .config file but in new
+  .history file, subsection "PATCH_SETS"
+
 2016-1-25 Will
 - Added correct licence details to CmdInterface files.
 - Synchronised Exherbo cmake.
