Reorganised grouping of main .config file. New config files unique to Yoshimi now carry the yoshim doctype.

--- a/desktop/yoshimi.1
+++ b/desktop/yoshimi.1
@@ -50,7 +50,7 @@ Attempting 'c' and 'i' will produce a warning and you will be left with the CLI 
 .BR \-S ", " \-\-state[=<file>] "  Load previously saved state."
 Defaults to "HOME/.config/yoshimi/yoshimi.state"
 .TP
-.BR \-u ", " \-\-jack-seession-file=<file> " Load named JACK session file."
+.BR \-u ", " \-\-jack-session-file=<file> " Load named JACK session file."
 .TP
 .BR \-U ", " \-\-jack-session-uuid=<uuid> " Use JACK session uuid."
 .TP
