--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.3.x
 
+2016-1-27 Will
+- Reorganised grouping of main .config file
+- New config files that are unique to Yoshimi now carry the yoshim
+  doctype instead of the ZynAddSubFX one.
+- minor doc spelling corrections.
+
 2016-1-26 Will
 - Patch Sets History no longer in main .config file but in new
   .history file, subsection "PATCH_SETS"
