--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2016-1-28 Will
+- Bugfix: Loading saved state now correctly sets buffer size.
+- Duplicated calls to state XML data removed.
+
 2016-1-27 Will
 - Reorganised grouping of main .config file
 - New config files that are unique to Yoshimi now carry the yoshim
