--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.x
 
+2016-2-1 Will
+Fixed regression. Config was being resaved when nothing had changed.
+
 2016-1-31 Will
 - Small gui correction to remove unnecessary scroll bar.
 - Recent Scale/State now greyed out if empty.
