--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,9 @@
 yoshimi 1.3.x
 
 2016-2-1 Will
-Fixed regression. Config was being resaved when nothing had changed.
+- Fixed regression. Config was being resaved when nothing had changed.
+- Refined message hiding. Applies to Reports console and CLI. Hiding
+  is also independent from those forced to CLI only.
 
 2016-1-31 Will
 - Small gui correction to remove unnecessary scroll bar.
