--- a/desktop/yoshimi.1
+++ b/desktop/yoshimi.1
@@ -1,10 +1,10 @@
-.TH yoshimi "January 2016" "yoshimi 1.3.8"
+.TH yoshimi 1 "January 2016" "yoshimi 1.3.8"
 .SH NAME
 yoshimi \- a software music synthesiser
 .SH SYNOPSIS
 \fByoshimi\fP [\fI\-option\fP] [\fIcmd\fP]
 .SH DESCRIPTION
-\fBYoshimi\fP is a polyphonic multi-part sound synthesiser utilising three distinct 'engines' that can be used separately or together. These can also be stacked into 'kits', typically for percussion. It fully suports both JACK and ALSA for MIDI input and audio output.
+\fBYoshimi\fP is a polyphonic multi-part sound synthesiser utilising three distinct 'engines' that can be used separately or together. These can also be stacked into 'kits', typically for percussion. It fully supports both JACK and ALSA for MIDI input and audio output.
 .PP
 \fBYoshimi\fP can be run in a graphical interface, a command line interface, or with control from both. A number of controls can also be accessed via MIDI. The CLI has it's own Readline parser and built-in help system.
 .SH COMMANDS
