--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,10 @@ yoshimi 1.3.x
 
 2016-2-14 Will
 - Removed jack/alsa tests from CMakeLists.txt It's now redundant.
+- Re-enabled up to 128 roots and banks and removed redundant maximum
+  test - MIDI can't send > 127 and command line does it's own check.
+- Updated docs.
+- Added 'Muted Synth' instrument patch. 
 
 2016-2-14 Andrew
 - Removed ControlInterface (obsoleted) + fixes for gcc-6 
