--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,9 @@
 yoshimi 1.3.x
 
-2016-2-15
+2016-2-15 Will
 - Fixed regression. Moved bank and history loading back into config.
   Previous change didn't improve startup behaviour and messed with LV2.
+- Created 'stateChanged' varialble for future use. 
 
 2016-2-14 Will
 - Removed jack/alsa tests from CMakeLists.txt It's now redundant.
