--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2016-2-19 Will
+- Corrected desktop file
+- Updated docs & screen images
+
 2016-2-18 Will
 - Bugfix: CLI can again list current bank/root
 - Bugfix: on debian testing GUI was locking up if you reduced the ID of the
