--- a/Changelog
+++ b/Changelog
@@ -1,13 +1,18 @@
 yoshimi 1.3.x
 
+2016-2-21 Will
+- Reorganised CLI root and bank commands.
+- Implemented creating & deleteing new banks in CLI.
+
+
 2016-2-19 Will
-- Corrected desktop file
-- Updated docs & screen images
+- Corrected desktop file.
+- Updated docs & screen images.
 
 2016-2-18 Will
-- Bugfix: CLI can again list current bank/root
+- Bugfix: CLI can again list current bank/root.
 - Bugfix: on debian testing GUI was locking up if you reduced the ID of the
-  last root path in the list.git status
+  last root path in the list.git status.
   
 
 2016-2-17 Will
