--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.9 rc1
 
+2016-2-25 Will
+- Bugfix: another GCC6 incompatibility resolved.
+
 2016-2-21 Andrew
 - setCurrentRootID properly fixed.
 
@@ -16,7 +19,7 @@ yoshimi 1.3.9 rc1
 2016-2-18 Will
 - Bugfix: CLI can again list current bank/root.
 - Bugfix: on debian testing GUI was locking up if you reduced the ID of the
-  last root path in the list.git status.
+  last root path in the list.
   
 
 2016-2-17 Will
