--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,8 @@
-yoshimi 1.3.9 rc1
+yoshimi 1.3.9 rc2
 
 2016-2-25 Will
 - Bugfix: another GCC6 incompatibility resolved.
+- Set versuion for rc2
 
 2016-2-21 Andrew
 - setCurrentRootID properly fixed.
