--- a/Changelog
+++ b/Changelog
@@ -2,7 +2,7 @@ yoshimi 1.3.9 rc2
 
 2016-2-25 Will
 - Bugfix: another GCC6 incompatibility resolved.
-- Set versuion for rc2
+- Set version for rc2
 
 2016-2-21 Andrew
 - setCurrentRootID properly fixed.
