--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,9 @@
-yoshimi 1.3.9 rc3
+yoshimi 1.3.9
+
+2016-2-28 Will
+- Effect preset number is now included in prompt.
+- Removed duplicate instrument "0085-old_pad.xiz from Mysterious bank.
+- Set version to 1.3.9 for release.
 
 2016-2-26 Andrew
 - Bugfix: in 'main' another GCC6 issue.
