--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.3.x
 
+2016-3-5 Will
+- Console now adds entries at the start.
+- matchWord now case insensitve to reference word as well as input.
+- More messages can be suppressed.
+
 2016-2-28 Will
 - Updated docs.
 
