--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.3.x
 
+2016-3-8 Will
+- Bugfix: CMakeLists.txt now recognises both ncurses and ncursesw.
+- Bugfix: Default presets were only being set if there were none in
+  the .config file, but not if there was no config file!
+- Max preset directories set to 128 (same as roots and banks).
+
 2016-3-5 Will
 - Console now adds entries at the start.
 - matchWord now case insensitve to reference word as well as input.
