Minor doc corrections and updates.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.x
 
+20-3-13 Will
+- Minor doc corrections and updates.
+
 2016-3-10 Will
 - Reorganised CMakeLists.txt files for better integration with
   different distros, and to recognise LV2_PATH.
