--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 yoshimi 1.3.x
 
-20-3-13 Will
+2016-3-16 Will
+- Fixed regression: LV2 gui now displays correctly again.
+
+2016-3-13 Will
 - Minor doc corrections and updates.
 
 2016-3-10 Will
