--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2016-3-20 Will
+- CLI can now load and save states.
+- Whenever scales are loaded via GUI tunings are also now applied.
+
 2016-3-19 Will
 - Reorganised startup so that bank and history loading
   doesn't slow down intial stand-alone display, as this
