--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2016-3-21 Will
+- Bugfix: All file loads incorporating scales now correctly tuned.
+- CLI can now load and save scales.
+
 2016-3-20 Will
 - CLI can now load and save states.
 - Whenever scales are loaded via GUI tunings are also now applied.
