--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,13 @@
 yoshimi 1.3.x
 
+2016-3-23 Will
+- Implemented CLI Vector save and load.
+- Minimum CLI abbreviations capitalised.
+
 2016-3-21 Will
 - Bugfix: All file loads incorporating scales now correctly tuned.
 - CLI can now load and save scales.
+- Small adjustment to scales window.
 
 2016-3-20 Will
 - CLI can now load and save states.
