--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,7 @@ yoshimi 1.3.x
 - Added error check for invalid vector files.
 - Bugfix: if jack not running and ALSA not available yoshimi 
   sometimes segfalted.
+- Splash screen can now be disabled.
 
 2016-3-23 Will
 - Implemented CLI Vector save and load.
