--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.x
 
+2016-4-8 Will
+- Bugfix: CLI vector Y fetures now correctly set.
+
 2016-4-5 Will
 - Extra CLI error check when loading vectors.
 
