--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.3.x
 2016-4-22 Will
 - Started to implement CLI read values.
 - Rationalised some error messages.
+- Detached some direct part access from gui.
 
 2016-4-8 Will
 - Bugfix: CLI vector Y fetures now correctly set.
