--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.x
 
+2016-4-23 Will
+- Added 'get' alias the 'read' command.
+
 2016-4-22 Will
 - Started to implement CLI read values.
 - Rationalised some error messages.
