--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.x
 
+2016-4-26 Will
+- Refactored 'history' so only one common file is created.
+
 2016-4-23 Will
 - Added 'get' alias the 'read' command.
 
