--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.3.x
 2016-4-27 Will
 - Code cleanups.
 - History optimisations.
+- Made history variable names consistent.
 
 2016-4-26 Will
 - Refactored 'history' so only one common file is created.
