--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,7 @@ yoshimi 1.3.x
 - Code cleanups.
 - History optimisations.
 - Made history variable names consistent.
+- More work on CLI read/get.
 
 2016-4-26 Will
 - Refactored 'history' so only one common file is created.
