--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.3.x
 
+2016-4-28 Will
+- Implemented CLI read/get for vectors.
+- Improved CLI vector listing.
+- Improved sync between CLI and GUI for effects.
+- Removed temporary 'test' command from CLI.
+
 2016-4-27 Will
 - Code cleanups.
 - History optimisations.
