--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.3.x
 
+2016-5-1 Will
+- Completed right click to and from resonance
+- First-time startup now opens the virtual keyboard.
+- Fixed master and part key shift range limits to +-36 semitones.
+- Implemented master, part & channel NRPN key shift.
+
 2016-4-30 Will
 - Implemented right click on child window button closes parent
   and right click on child close button opens parent.
@@ -27,7 +33,7 @@ yoshimi 1.3.x
 - Refactored 'history' so only one common file is created.
 
 2016-4-23 Will
-- Added 'get' alias the 'read' command.
+- Added 'get' alias to the 'read' command.
 
 2016-4-22 Will
 - Started to implement CLI read values.
