--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.x
 
+2016-5-4 Will
+- Bugfix: offset could be uninitialsed in history saving routine.
+
 2016-5-3 Will
 - Implemented setting jack autoconnect status in both GUI and CLI.
 
