--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.3.x
 
+2016-5-5 Will
+- Added GUI recognition tests (displayed in the CLI)
+  Volume button on any Addsynth Voice
+  Freq button on any LFO
+
 2016-5-4 Will
 - Bugfix: offset could be uninitialsed in history saving routine.
 
