--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2016-5-6 Will
+- Tests slightly improved and will now display in the GUI or CLI
+  whichever is selected.
+
 2016-5-5 Will
 - Added GUI recognition tests (displayed in the CLI)
   Volume button on any Addsynth Voice
