--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2016-5-7 Will
+- Yoshimi now requires C++11
+- All parts of LFO now respond to test.
+
 2016-5-6 Will
 - Tests slightly improved and will now display in the GUI or CLI
   whichever is selected.
