--- a/Changelog
+++ b/Changelog
@@ -3,7 +3,7 @@ yoshimi 1.3.x
 2016-5-7 Will
 - Yoshimi now requires C++11
 - All parts of LFO now respond to test.
-- Filter params partly responding to test.
+- Filter params mostly responding to test.
 
 2016-5-6 Will
 - Tests slightly improved and will now display in the GUI or CLI
