--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.x
 
+2016-5-8 Will
+- Filter params complete.
+
 2016-5-7 Will
 - Yoshimi now requires C++11
 - All parts of LFO now respond to test.
