--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,8 @@
 yoshimi 1.3.x
 
 2016-5-12 Will
-- Identified AddSynth 7 PadSynth oscillator controls.
+- Identified AddSynth & PadSynth oscillator controls.
+- Included Adsynth Voice & Modulator controls.
 
 2016-5-11 Will
 - Improved SubSynth ID code.
