--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ yoshimi 1.3.x
 
 2016-5-14 Will
 - All Identifed data now passed to synthengine in uniform manner.
+- Bugfix: Right click on mod oscilator didn't close AddVoice window.
 
 2016-5-13 Will
 - Identifed Resonance controls.
