--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.3.x
 2016-5-14 Will
 - All Identifed data now passed to synthengine in uniform manner.
 - Bugfix: Right click on mod oscilator didn't close AddVoice window.
+- Mostly Identified Envelopes (not fee mode).
 
 2016-5-13 Will
 - Identifed Resonance controls.
