--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.3.x
 
+2016-5-15 Will
+- Changed Resonance interpolation control to clarify two types
+  and reorganised layout of neighboring controls for uniformity.
+- Bugfix: Filter control had wrong ID
+- Bugfix: LFO had wroing insert parameters.
+
 2016-5-14 Will
 - All Identifed data now passed to synthengine in uniform manner.
 - Bugfix: Right click on mod oscilator didn't close AddVoice window.
