--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.3.x
 
+2016-5-16 Will
+- Updated some tooltips
+- Documentation now covers all implemeted controls.
+- Identified top level controls.
+- Adjusted some control numbers for conformity.
+
 2016-5-15 Will
 - Changed Resonance interpolation control to clarify two types
   and reorganised layout of neighboring controls for uniformity.
