Identified controls in Part Controllers Updated docs

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2016-5-17 Will
+- Identified controls in Part Controllers.
+- Updated dev-notes/Yoshimi Controller Numbers.ods
+
 2016-5-16 Will
 - Updated some tooltips
 - Documentation now covers all implemeted controls.
