--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,11 @@
 yoshimi 1.3.x
 
+2016-5-19 Will
+- Completed moving controls ID text from GUI to main code.
+- Corrected dev-notes/Yoshimi Controller Numbers.ods
+
 2016-5-18 Will
-- Started moving controls ID text form GUI to main code.
+- Started moving controls ID text from GUI to main code.
 - New sound Pad Organ :)
 
 2016-5-17 Will
