Reviewed files to remove GCC6 warnings

--- a/Changelog
+++ b/Changelog
@@ -6,6 +6,7 @@ yoshimi 1.3.x
 - Changed engine numbers.
 - Updated docs.
 - Started Identifying effects controls.
+- Reviewed files to remove GCC6 warnings.
 
 2016-5-19 Will
 - Completed moving controls ID text from GUI to main code.
