--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2016-5-22 Will
+- Bugfix: Kit level IDs were wrong.
+- Updated docs.
+
 2016-5-21 Will
 - Effects controls now mostly identified.
 - Yoshimi now only sets a single client if jack is both midi & audio
