--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.x
 
+2016-5-23 Will
+- Added aftertouch recognition to LV2 (not actually used yet)
+
 2016-5-22 Will
 - Bugfix: Kit level IDs were wrong.
 - Updated docs.
