--- a/Changelog
+++ b/Changelog
@@ -5,6 +5,7 @@ yoshimi 1.3.x
 - Identified part to system effect sends.
 - Identified insert and system effect controls (not system sends)
 - More adjustment to control ID numbers.
+- Yoshimi now has a build number :)
 
 2016-5-22 Will
 - Bugfix: Kit level IDs were wrong.
