--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.x
 
+2016-5-24
+- System sends now identified :)
+
 2016-5-23 Will
 - Added aftertouch recognition to LV2 (not actually used yet)
 - Identified part to system effect sends.
