--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,11 @@
 yoshimi 1.3.x
 
-2016-5-24
+2016-5-25 Will
+- Refinements to system and insertion effect selectors
+- Updated docs
+- Added auto build update.
+
+2016-5-24 Will
 - System sends now identified :)
 
 2016-5-23 Will
